force-app/main/default/objects/HISTORICO_DE_REVISAO__c/HISTORICO_DE_REVISAO__c.object-meta.xml
<CustomObject>
    <label>Histórico de Revisão</label>
    <nameField>
        <label>Histórico de Revisão</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Históricos de Revisão</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>