force-app/main/default/objects/HISTORICO_DE_REVISAO__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABC1-GO</fullName>
                <label>ABC-GO</label>
            </value>
            <value>
                <fullName>ABC2-MT</fullName>
                <label>ABC-MT</label>
            </value>
            <value>
                <fullName>ABC-TO</fullName>
                <label>ABC3-TO</label>
            </value>
            <value>
                <fullName>HEALTH_SOLUTION</fullName>
                <label>HEALTH SOLUTION</label>
            </value>
            <value>
                <fullName>HOSPCOM1</fullName>
                <label>HOSPCOM</label>
            </value>
            <value>
                <fullName>HOSPCOM2-DF</fullName>
                <label>HOSPCOM-DF</label>
            </value>
            <value>
                <fullName>GDB1</fullName>
                <label>GDB</label>
            </value>
            <value>
                <fullName>HOSPCOM-153</fullName>
            </value>
            <value>
                <fullName>HOSPCOM5MT</fullName>
                <label>HOSPCOM-MT</label>
            </value>
            <value>
                <fullName>HOSPCOM-SOROCABA</fullName>
            </value>
            <value>
                <fullName>GESTCOM</fullName>
            </value>
            <value>
                <fullName>HOSPCOM MG</fullName>
            </value>
            <value>
                <fullName>GDB-GO</fullName>
            </value>
            <value>
                <fullName>HOSPCOM-AM</fullName>
            </value>
            <value>
                <fullName>HOSPCOM-SP CAPITAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>