force-app/main/default/objects/HISTORICO_DE_REVISAO__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <length>200</length>
    <type>Text</type>
</CustomField>