force-app/main/default/objects/HISTORICO_DE_REVISAO__c/fields/L_M_D__c.field-meta.xml
<CustomField>
    <fullName>L_M_D__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L.M.D</label>
    <referenceTo>L_M_D__c</referenceTo>
    <relationshipLabel>Históricos de Revisão</relationshipLabel>
    <relationshipName>Hist_ricos_de_Revis_o</relationshipName>
    <type>Lookup</type>
</CustomField>