force-app/main/default/objects/HISTORICO_DE_REVISAO__c/fields/N_da_Revis_o__c.field-meta.xml
<CustomField>
    <fullName>N_da_Revis_o__c</fullName>
    <label>N° da Revisão</label>
    <length>4</length>
    <type>Text</type>
</CustomField>