force-app/main/default/objects/HISTORICO_DE_REVISAO__c/fields/Natureza_da_Alteracao__c.field-meta.xml
<CustomField>
    <fullName>Natureza_da_Alteracao__c</fullName>
    <label>Natureza da Alteração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>