force-app/main/default/objects/HISTORICO_DE_REVISAO__c/fields/Procedimento_do_Sistema_de_Qualidade__c.field-meta.xml
<CustomField>
    <fullName>Procedimento_do_Sistema_de_Qualidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedimento do Sistema de Qualidade</label>
    <referenceTo>PSQ__c</referenceTo>
    <relationshipLabel>HISTÓRICOS DE REVSÃÕES</relationshipLabel>
    <relationshipName>HIST_RICOS_DE_REVS_ES</relationshipName>
    <type>Lookup</type>
</CustomField>