force-app/main/default/objects/HISTORICO_DE_REVISAO__c/fields/Procedimento_Operacional_Padr_o__c.field-meta.xml
<CustomField>
    <fullName>Procedimento_Operacional_Padr_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedimento Operacional Padrão</label>
    <referenceTo>POP__c</referenceTo>
    <relationshipLabel>Históricos de Revisão</relationshipLabel>
    <relationshipName>Hist_ricos_de_Revis_o</relationshipName>
    <type>Lookup</type>
</CustomField>